# xinterp

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: divop.rs  extended.rs  interp.rs  lib.rs  piecewise.rs  schemes.rs  transform.rs
tests/: test_core.py
xinterp/: __init__.py  core.py
